# test-pcce-db

./: LICENSE  README.md  pyproject.toml
core/: asgi.py  db_routers.py  settings.py  urls.py  wsgi.py
teste_app/: models.py
teste_app/migrations/: 0001_initial.py
teste_app_outro/: apps.py  models.py
teste_app_outro/migrations/: 0001_initial.py
